# wallet/handlers.send.go
@@ -1,7 +1,9 @@
 package wallet
 
 import (
+	"log"
 	"net/http"
+	"os"
 	"tajfi-server/config"
 	"tajfi-server/wallet/tapd"
 
@@ -68,12 +70,27 @@ func SendStart(c echo.Context) error {
 		})
 	}
 
+	// Call the modofied Tapd service to write our sighash.hex file
+	_, err = tapd.SignVirtualPSBT(cfg.TapdHost, cfg.TapdMacaroon, fundedPsbt.FundedPSBT)
+	// if err != nil { we dont really care if this fails, it is expected }
+
+	// Fetch the hex file now
+	taprootSigsDir := cfg.TaprootSigsDir
+	sighash, err := ReadFile(taprootSigsDir + "sighash.hex")
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, map[string]string{
+			"error": err.Error(),
+		})
+	}
+	fundedPsbt.SighashHexToSign = sighash
+
 	return c.JSON(http.StatusOK, fundedPsbt)
 }
 
 // SendCompletePayload defines the request payload structure for /send/complete.
 type SendCompletePayload struct {
-	PSBT string `json:"psbt" validate:"required"`
+	PSBT         string `json:"psbt" validate:"required"`
+	SignatureHex string `json:"signature_hex" validate:"required"`
 }
 
 // SendComplete completes the send transaction by calling Tapd and returning the transaction ID
@@ -93,8 +110,35 @@ func SendComplete(c echo.Context) error {
 	// Extract config from context
 	cfg := config.GetConfig(c.Request().Context())
 
+	// Write the override signature to the file that tapd recognizes
+	if err := WriteSignatureToFile(cfg.TaprootSigsDir+"signature.hex", payload.SignatureHex); err != nil {
+		return c.JSON(http.StatusInternalServerError, map[string]string{
+			"error": err.Error(),
+		})
+	}
+
+	// Call the Tapd service to sign the PSBT, knowing it will use the signature.hex file
+	signedPsbt, err := tapd.SignVirtualPSBT(cfg.TapdHost, cfg.TapdMacaroon, payload.PSBT)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, map[string]string{
+			"error": err.Error(),
+		})
+	}
+
+	log.Println("Signed PSBT successfully")
+
+	// now delete the signature.hex and sighash.hex files
+	err = os.Remove(cfg.TaprootSigsDir + "signature.hex")
+	if err != nil {
+		log.Println("Failed to delete signature.hex file", err)
+	}
+	err = os.Remove(cfg.TaprootSigsDir + "sighash.hex")
+	if err != nil {
+		log.Println("Failed to delete sighash.hex file", err)
+	}
+
 	params := tapd.AnchorVirtualPSBTParams{
-		VirtualPSBTs: []string{payload.PSBT},
+		VirtualPSBTs: []string{signedPsbt.SignedPSBT},
 		TapdHost:     cfg.TapdHost,
 		Macaroon:     cfg.TapdMacaroon,
 	}
